# core-language-parse

./: .gitignore  ChangeLog.md  LICENSE  README.md  core-language-parser.cabal  package.yaml
app/: Main.hs
res/: input.txt
src/: CoreParser.hs  Lib.hs  Main.hs  Model.hs  Parser.hs  Read.hs
test/: Spec.hs
