name:                core-language-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danielesergio/core-language-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Daniele Sergio
maintainer:          daniele.sergio0@gmail.com
copyright:           GPL
category:            My new project
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable core-language-parser
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
